k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: roster-saas
  labels:
    name: roster-saas
    environment: production
